--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</div>
 					<div class="panel-body">
 
-						<img class="img-circle" :src="post.img"> <!-- this is bound to the img slot -->
+						<img class="img-circle" :src="post.img" width="240px"> <!-- this is bound to the img slot -->
 						<h4><em>by {{post.author}}</em></h4>
 
 						<p>{{post.body}}</p> <!-- this is bound to the body slot -->
